--- a/index.html
+++ b/index.html
@@ -1,146 +1,187 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>📱 GOD'S OWN PHONE GADGET - Modern</title>
-  <link rel="stylesheet" href="style.css" />
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://phone-2cv4.onrender.com; connect-src 'self' https://phone-2cv4.onrender.com; style-src 'self' 'unsafe-inline'; img-src 'self' data:;">
-  <link rel="icon" href="favicon.ico" type="image/x-icon" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>📱Admin Panel - GOD'S OWN PHONE GADGET</title>
+  <link rel="stylesheet" href="style.css">
+  <!-- The above path is correct if this file is opened as admin-panel/index.html -->
+  <link rel="icon" href="/favicon.ico" type="image/x-icon" />
 </head>
 <body>
-  <main class="main-content container">
-    <header class="main-header">
-      <div class="header-flex">
-        <div class="brand">
-          <span class="brand-icon">📱</span>
-          <span class="brand-title">GOD'S OWN PHONE GADGET</span>
-        </div>
-        <button id="menu-toggle" class="menu-toggle" aria-label="Open menu">☰</button>
-      </div>
-    </header>
-    <nav id="side-menu" class="side-menu-modal">
-      <button id="close-menu" class="close-menu" aria-label="Close menu">&times;</button>
-      <ul class="menu-list">
-        <li><button id="menu-notifications" class="menu-item">🔔 Notifications <span id="notif-badge" class="notif-badge hidden"></span></button></li>
-        <li><button id="menu-darkmode" class="menu-item">🌙 Dark Mode</button></li>
-        <li><button id="menu-profile" class="menu-item">👤 Profile</button></li>
-        <li><button id="menu-settings" class="menu-item">⚙️ Settings</button></li>
-        <li><button id="menu-help" class="menu-item">❓ Help</button></li>
-        <li><button id="menu-myorders" class="menu-item">📦 My Orders</button></li>
-        <li><button id="menu-logout" class="menu-item">🚪 Logout</button></li>
-      </ul>
-    </nav>
-    <section id="auth-section" class="glass-card">
-      <div id="login-view" class="auth-view">
-        <h2>Login</h2>
-        <form id="login-form" autocomplete="on">
-          <div class="form-group">
-            <label for="login-email">Email</label>
-            <input type="email" id="login-email" placeholder="Email" required />
-          </div>
-          <div class="form-group">
-            <label for="login-password">Password</label>
-            <input type="password" id="login-password" placeholder="Password" required />
-          </div>
-          <button type="submit" class="btn-main">Login</button>
-        </form>
-        <div id="login-message" class="form-message"></div>
-        <p class="switch-link">Don't have an account? <a href="#" id="show-register-link">Register</a></p>
-      </div>
-      <div id="register-view" class="auth-view hidden">
-        <h2>Register</h2>
-        <form id="register-form">
-          <div class="form-group">
-            <label for="reg-name">Name</label>
-            <input type="text" id="reg-name" required />
-          </div>
-          <div class="form-group">
-            <label for="reg-email">Email</label>
-            <input type="email" id="reg-email" required />
-          </div>
-          <div class="form-group">
-            <label for="reg-state">State:</label>
-            <select id="reg-state" required></select>
-          </div>
-          <div class="form-group">
-            <label for="reg-lga">Local Government:</label>
-            <select id="reg-lga" required></select>
-          </div>
-          <div class="form-group">
-            <label for="reg-address">Full Address:</label>
-            <input type="text" id="reg-address" required>
-          </div>
-          <div class="form-group">
-            <label for="reg-password">Password</label>
-            <input type="password" id="reg-password" required />
-          </div>
-          <div class="form-group">
-            <label for="reg-confirm-password">Confirm Password</label>
-            <input type="password" id="reg-confirm-password" required />
-          </div>
-          
-          <button type="submit" class="btn-main">Register</button>
-        </form>
-        <div id="register-message" class="form-message"></div>
-        <div id="verify-code-section" class="hidden">
-          <h3>Verify Your Email</h3>
-          <p>Enter the code sent to your email:</p>
-          <input type="text" id="verification-code" placeholder="Verification Code" required />
-          <button id="verify-btn" class="btn-main">Verify</button>
-        </div>
-        <p class="switch-link">Already registered? <a href="#" id="show-login-link">Login</a></p>
-      </div>
-    </section>
-    <section id="products-section" class="glass-card hidden">
-      <h2>Our Products</h2>
-      <div class="search-filter">
-        <input type="text" id="search-input" placeholder="Search products..." />
-        <select id="category-filter">
-          <option value="">All Categories</option>
-          <option value="Smartphones">Smartphones</option>
-          <option value="Laptops">Laptops</option>
-          <option value="Tablets">Tablets</option>
-          <option value="Accessories">Accessories</option>
-          <option value="Wearables">Wearables</option>
-        </select>
-      </div>
-      <div id="product-list" class="product-grid"></div>
-    </section>
-  </main>
-  <div id="notification-modal" class="modal hidden">
-    <div class="modal-content">
-      <button id="close-notif" class="close-modal">&times;</button>
-      <h3>Notifications</h3>
-      <ul id="notif-list" class="notif-list"></ul>
-    </div>
-  </div>
-  <div id="orders-modal" class="modal hidden">
-    <div class="modal-content" style="max-width:600px;">
-      <button id="close-orders-modal" class="close-modal">&times;</button>
-      <h3>My Orders</h3>
-      <div id="orders-list">Loading...</div>
-    </div>
-  </div>
-  <div id="profile-modal" class="modal hidden">
-    <div class="modal-content">
-      <button id="close-profile-modal" class="close-modal">&times;</button>
-      <h3>Profile</h3>
-      <div id="profile-info">Loading...</div>
-    </div>
-  </div>
-  <div id="help-modal" class="modal hidden">
-    <div class="modal-content">
-      <button id="close-help-modal" class="close-modal">&times;</button>
-      <h3>Customer Care</h3>
-      <div id="help-info">
-        <p>For assistance, contact us at:</p>
+  <div class="admin-layout">
+    <aside class="admin-sidebar">
+      <div class="sidebar-header">📱 GOD'S OWN ADMIN</div>
+      <nav>
         <ul>
-          <li>Phone: 0800-123-4567</li>
-          <li>Email: support@godsownphone.com</li>
+          <li><a href="#" id="nav-dashboard" class="sidebar-link active">Dashboard</a></li>
+          <li><a href="#" id="nav-products" class="sidebar-link">Products</a></li>
+          <li><a href="#" id="nav-orders" class="sidebar-link">Orders</a></li>
+          <li><a href="#" id="nav-users" class="sidebar-link">Users</a></li>
+          <li><a href="#" id="nav-sms" class="sidebar-link">SMS</a></li>
+          <li><a href="#" id="nav-settings" class="sidebar-link">Settings</a></li>
+          <li><a href="#" id="nav-logout" class="sidebar-link">Logout</a></li>
         </ul>
-        <p>We are here to help you 24/7!</p>
-      </div>
+      </nav>
+    </aside>
+    <main class="admin-main">
+      <header class="admin-header">
+        <h1 id="admin-title">Dashboard</h1>
+        <button id="add-product-btn" class="btn btn-primary">Add Product</button>
+      </header>
+      <section id="dashboard-section" class="admin-section">Welcome to the admin dashboard!</section>
+      <section id="products-section" class="admin-section" style="display:none;">
+        <h2>Product Management</h2>
+        <table>
+          <thead>
+            <tr>
+              <th>ID</th><th>Name</th><th>Price</th><th>Category</th><th>Description</th><th>Stock</th><th>Image</th><th>Action</th>
+            </tr>
+          </thead>
+          <tbody id="products-body">
+            <tr><td colspan="8">Loading...</td></tr>
+          </tbody>
+        </table>
+      </section>
+      <section id="orders-section" class="admin-section" style="display:none;">
+        <h2>Orders</h2>
+        <table>
+          <thead>
+            <tr>
+              <th>ID</th><th>Product</th><th>Qty</th><th>Customer</th><th>Phone</th><th>Address</th><th>Delivery</th><th>Payment</th><th>Status</th><th>Date</th><th>Action</th>
+            </tr>
+          </thead>
+          <tbody id="orders-body">
+            <tr><td colspan="11">Loading...</td></tr>
+          </tbody>
+        </table>
+      </section>
+      <section id="users-section" class="admin-section" style="display:none;">
+        <h2>Users</h2>
+        <table>
+          <thead>
+            <tr>
+              <th>Name</th><th>Email</th><th>Verified</th>
+            </tr>
+          </thead>
+          <tbody id="users-body">
+            <tr><td colspan="3">Loading...</td></tr>
+          </tbody>
+        </table>
+      </section>
+      <section id="sms-section" class="admin-section" style="display:none;">
+        <h2>SMS Management</h2>
+        <div class="sms-container">
+          <div class="sms-form-section">
+            <h3>Send SMS</h3>
+            <form id="send-sms-form">
+              <div class="form-group">
+                <label for="sms-recipients">Recipients</label>
+                <select id="sms-recipients" required>
+                  <option value="">Select recipients...</option>
+                  <option value="all">All Users</option>
+                  <option value="custom">Custom Numbers</option>
+                </select>
+              </div>
+              <div class="form-group" id="custom-numbers-group" style="display:none;">
+                <label for="custom-phone-numbers">Phone Numbers (comma separated)</label>
+                <input type="text" id="custom-phone-numbers" placeholder="+2348012345678, +2348765432109" />
+              </div>
+              <div class="form-group">
+                <label for="sms-message">Message</label>
+                <textarea id="sms-message" rows="4" placeholder="Type your SMS message here..." required maxlength="160"></textarea>
+                <small id="sms-char-count">0/160 characters</small>
+              </div>
+              <button type="submit" class="btn btn-primary">Send SMS</button>
+            </form>
+          </div>
+          <div class="sms-history-section">
+            <h3>SMS History</h3>
+            <div id="sms-history">
+              <p>No SMS sent yet.</p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section id="settings-section" class="admin-section" style="display:none;">
+        <h2>Settings</h2>
+        <h3>Send Update to Users</h3>
+        <form id="send-update-form" style="margin-bottom:1.5rem;">
+          <textarea id="update-message" rows="3" style="width:100%;max-width:500px;" placeholder="Type your update here..." required></textarea><br>
+          <button type="submit" class="btn btn-primary" style="margin-top:0.5rem;">Send Update</button>
+        </form>
+        <h4>Previous Updates</h4>
+        <ul id="updates-list" style="max-width:600px;padding-left:1.2em;"></ul>
+      </section>
+    </main>
+  </div>
+  <!-- Add Product Modal -->
+  <div id="add-product-modal" class="modal">
+    <div class="modal-content">
+      <button class="close" id="close-add-product-modal">&times;</button>
+      <h3>Add New Product</h3>
+      <form id="add-product-form">
+        <div class="form-group">
+          <label for="product-name">Name</label>
+          <input type="text" id="product-name" required />
+        </div>
+        <div class="form-group">
+          <label for="product-price">Price</label>
+          <input type="number" id="product-price" required min="0" />
+        </div>
+        <div class="form-group">
+          <label for="product-category">Category</label>
+          <input type="text" id="product-category" required />
+        </div>
+        <div class="form-group">
+          <label for="product-description">Description</label>
+          <textarea id="product-description" required></textarea>
+        </div>
+        <div class="form-group">
+          <label for="product-stock">Stock</label>
+          <input type="number" id="product-stock" required min="0" />
+        </div>
+        <div class="form-group">
+          <label for="product-image">Image</label>
+          <input type="file" id="product-image" accept="image/*" required />
+        </div>
+        <button type="submit" class="btn btn-success" style="margin-top:1rem;">Add Product</button>
+      </form>
+    </div>
+  </div>
+  <!-- Edit Product Modal -->
+  <div id="edit-product-modal" class="modal hidden">
+    <div class="modal-content">
+      <button class="close" id="close-edit-product-modal">&times;</button>
+      <h3>Edit Product</h3>
+      <form id="edit-product-form">
+        <div class="form-group">
+          <label for="edit-product-name">Name</label>
+          <input type="text" id="edit-product-name" required />
+        </div>
+        <div class="form-group">
+          <label for="edit-product-price">Price</label>
+          <input type="number" id="edit-product-price" required min="0" />
+        </div>
+        <div class="form-group">
+          <label for="edit-product-category">Category</label>
+          <input type="text" id="edit-product-category" required />
+        </div>
+        <div class="form-group">
+          <label for="edit-product-description">Description</label>
+          <textarea id="edit-product-description" required></textarea>
+        </div>
+        <div class="form-group">
+          <label for="edit-product-stock">Stock</label>
+          <input type="number" id="edit-product-stock" required min="0" />
+        </div>
+        <div class="form-group">
+          <label for="edit-product-image">Image</label>
+          <input type="file" id="edit-product-image" accept="image/*" />
+          <img id="edit-product-image-preview" style="max-width:120px;max-height:80px;display:none;margin:0.5em 0;" />
+        </div>
+        <button type="submit" class="btn btn-success" style="margin-top:1rem;">Save Changes</button>
+      </form>
     </div>
   </div>
   <script src="script.js"></script>
