--- a/index.html
+++ b/index.html
@@ -184,6 +184,7 @@
       </form>
     </div>
   </div>
+  <script src="config.js"></script>
   <script src="script.js"></script>
 </body>
 </html> 
