--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>📱Admin Panel - GOD'S OWN PHONE GADGET</title>
   <link rel="stylesheet" href="style.css">
   <!-- The above path is correct if this file is opened as admin-panel/index.html -->
-  <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+  <link rel="icon" href="../favicon.ico" type="image/x-icon" />
 </head>
 <body>
   <div class="admin-layout">
