--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="style.css">
   <!-- The above path is correct if this file is opened as admin-panel/index.html -->
   <link rel="icon" href="../favicon.ico" type="image/x-icon" />
+  <!-- Supabase JS client CDN -->
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.39.7/dist/umd/supabase.min.js"></script>
 </head>
 <body>
   <div class="admin-layout">
